# Big-Data-Portfolio

./: pyproject.toml
data/processed_data/: recommendations_based_on_titles.xlsx  recommendations_based_on_titles_and_journals.xlsx
notebooks/: Exploration and Recommendation Generation.ipynb  Exploration-Copy1.ipynb  Importing and Filtering Data.html  Read data and create filtered dataset.ipynb
