[tool.poetry]
name = "big_data_portfolio"
version = "0.1.0"
description = ""
authors = ["ab78 <amy.barber@ricardo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
dask = "^2023.3.1"
distributed = "^2023.3.1"
plotly = "^5.14.1"
tqdm = "^4.65.0"
nltk = "^3.8.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
